--- a/client/public/assets/css/index.css
+++ b/client/public/assets/css/index.css
@@ -1,4 +1,4 @@
-body {
+#root {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -617,11 +617,22 @@ body {
     background: #f5f5f5;
 }
 
-#frame .content .contact-profile img {
+#frame .content .contact-profile .img {
     width: 40px;
+    height: 40px;
     border-radius: 50%;
     float: left;
     margin: 9px 12px 0 9px;
+    background: rebeccapurple;
+}
+
+#frame .content .contact-profile .img span {
+    text-align: center;
+    display: block;
+    color: white;
+    /*font-weight: bold;*/
+    font-size: 1.5rem;
+    line-height: 1.8;
 }
 
 #frame .content .contact-profile p {
@@ -681,8 +692,20 @@ body {
     margin-bottom: 20px;
 }
 
-#frame .content .messages ul li.sent img {
+#frame .content .messages ul li.sent .img {
     margin: 6px 8px 0 0;
+    width: 25px;
+    height: 25px;
+    background: cadetblue;
+    border-radius: 50%;
+}
+
+#frame .content .messages ul li.sent .img span {
+    display: block;
+    text-align: center;
+    line-height: 1.4;
+    font-size: 16px;
+    color: white;
 }
 
 #frame .content .messages ul li.sent p {
@@ -690,11 +713,21 @@ body {
     color: #f5f5f5;
 }
 
-#frame .content .messages ul li.replies img {
+#frame .content .messages ul li.replies .img {
     float: right;
     margin: 6px 0 0 8px;
+    width: 25px;
+    height: 25px;
+    background: #2c3e50;
+    border-radius: 50%;
 }
-
+#frame .content .messages ul li.replies .img span{
+    display: block;
+    text-align: center;
+    line-height: 1.4;
+    font-size: 16px;
+    color: white;
+}
 #frame .content .messages ul li.replies p {
     background: #f5f5f5;
     float: right;
@@ -729,7 +762,7 @@ body {
 
 #frame .content .message-input .wrap {
     position: relative;
-    margin-left:5px;
+    margin-left: 5px;
 }
 
 #frame .content .message-input .wrap input {
